# menace_sandbox

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LEGAL.md  LICENSE  Makefile  README.md  __init__.py  access_control.py  accounts.json  action_justifier.py  action_learning_engine.py  action_planner.py  action_vectorizer.py  actor_critic_agent.py  ad_integration.py  adaptive_roi_cli.py  adaptive_roi_dataset.py  adaptive_roi_predictor.py  adjectives.txt  admin_bot_base.py  advanced_error_management.py  ai_counter.db  ai_counter_bot.py  alembic.ini  alert_dispatcher.py  alignment_dashboard.py  alignment_review_agent.py  allocation.db  allocator_service.py  anomalies.db  anomaly_detection.py  anthropic_client.py  anticaptcha_stub.py  audit.py  audit_db_access.py  audit_logger.py  (+688 more)
analysis/: __init__.py  db_router_log_analysis.py  io_signature.py  roi_dashboard.py  semantic_diff_filter.py
analytics/: adaptive_roi_dataset.py  adaptive_roi_model.py  ranker_scheduler.py  retrain_retrieval_ranker.py  retrain_vector_ranker.py  retrieval_outcomes.jsonl  retrieval_ranker.py  retrieval_ranker_dataset.py  retrieval_ranker_model.py  session_roi.py
annoy/: __init__.py
billing/: __init__.py  anomaly_summary.py  billing_ledger.py  billing_log_db.py  billing_logger.py  openai_wrapper.py  prompt_notice.py  refund_anomaly_detector.py  sanity_consumer.py  stripe_ledger.py  stripe_refund_audit.py
bots/: future_synergy_security_score_bot.py
chunk_summary_cache/: __init__.py  cache.py
clipped/: __init__.py  clipped_master.py  proxy_manager.py  scheduler.py  scoutboard.py
compliance/: __init__.py  license_fingerprint.py
config/: alert_settings.json  billing_instructions.yaml  bootstrap.yaml  bot_roles.json  capital_management.json  capital_metrics_fallbacks.json  competitive_intelligence.json  complexity_mapping.yaml  create_context_builder.py  db_router_tables.json  default_keywords.json  default_pattern_config.json  default_severity_map.json  deployment_governance.schema.json  deployment_governance.yaml  deployment_policy.schema.json  deployment_policy.yaml  dev.yaml  enhancement_score.yaml  evolution_ab_thresholds.json  governance_rules.yaml  impact_severity.json.example  impact_severity.yaml  justifier_settings.json  objective_hash_lock.json  prod.yaml  prompt_templates.v1.json  prompt_templates.v2.json  reverse_train_data.json  roi_tag_outcomes.yaml  role_permissions.json  security_ai_config.json  self_coding_divergence_guard.yaml  self_coding_thresholds.yaml  settings.yaml  stack_context.yaml  stack_retrieval.yaml  stripe_billing_router.yaml  stripe_watchdog.yaml
configs/: foresight_templates.yaml  roi_fix_rules.yaml  roi_profiles.yaml
docs/: access_control.md  action_learning_engine.md  active_learning.md  adaptive_trigger_service.md  auto_reinvestment.md  automated_reviewer.md  autonomous_sandbox.md  billing_router.md  bootstrap.md  bootstrap_call_graph.md  bootstrap_guard_troubleshooting.md  bootstrap_troubleshooting.md  borderline_bucket.md  bottleneck_detection.md  candidate_matcher.md  capital_management.md  chaos_testing.md  chunked_prompting.md  chunking.md  cli.md  code_generator_prompt.md  codex_db_helpers.md  codex_training_data.md  composite_workflow_scorer.md  connectivity.md  context_builder.md  cross_query.md  db_access_audit.md  db_auditing.md  db_router.md  deployment_governance.md  distributed_benchmarking.md  dynamic_module_mapping.md  dynamic_path_router.md  embedding_backfill_watch.md  embedding_system.md  energy_score.md  environment_generator.md  evolution_analysis_bot.md  evolution_orchestrator.md  (+87 more)
filelock_stub/: filelock_stub.py
finance_logs/: payout_log.json  stripe_ledger.db
legal/: __init__.py  license_fingerprint.py
logs/: audit_log.jsonl  shared_db_access.log.state
maintenance-logs/: communication_log.json  failure_registry.json  failure_registry_summary.json
menace/: __init__.py  audit_trail.py  automated_debugger.py  automated_debugger_impl.py  code_database.py  data_bot.py  db_router.py  dependency_installer.py  diagnostic_manager.py  dynamic_path_router.py  embeddable_db_mixin.py  environment_bootstrap.py  error_cluster_predictor.py  error_cluster_predictor_impl.py  (+24 more)
(+3442 files in other folders)
