[project]
name = "menace"
version = "0.1.0"
description = "Automated video clipping and social media posting bots"
readme = "README.md"
authors = [{ name = "Cyberlolos Team", email = "team@example.com" }]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "moviepy",
    "pytube",
    "selenium",
    "pyautogui",
    "requests",
    "opencv-python",
    "numpy",
    "filelock",
    "undetected-chromedriver",
    "selenium-stealth",
    "scikit-learn",
    "beautifulsoup4",
    "scipy",
    "PyPDF2",
    "gensim",
    "SpeechRecognition",
    "gTTS",
    "SQLAlchemy",
    "sqlparse",
    "alembic",
    "psycopg2-binary",
    "pandas",
    "fuzzywuzzy[speedup]",
    "marshmallow",
    "celery",
    "pyzmq",
    "pika",
    "psutil",
    "risky",
    "networkx",
    "pulp"
    ,"Flask"
    ,"PyYAML"
    ,"GitPython"
    ,"pymongo"
    ,"elasticsearch"
    ,"Faker"
    ,"docker"
    ,"boto3"
    ,"prometheus-client"
    ,"deap"
    ,"simpy"
    ,"matplotlib"
    ,"Jinja2"
    ,"playwright"
    ,"fastapi"
    ,"pydantic"
    ,"pydantic-settings"
    ,"radon"
    ,"redis"
    ,"sentence-transformers"
    ,"hdbscan"
    ,"annoy"
    ,"faiss-cpu"
    ,"libcst"
    ,"kafka-python"
    ,"pyspark"
    ,"stable-baselines3"
    ,"torch"
    ,"sentry-sdk"
    ,"cryptography"
    ,"tiktoken"
    ,"vaderSentiment"
    ,"stripe>=12.5.0"
    ,"datasets"
]

[project.scripts]
menace-master = "service_supervisor:main"
environment-cli = "environment_cli:main"
menace = "menace_cli:main"
adaptive-roi = "adaptive_roi_cli:main"
sandbox-launcher = "tools.windows_sandbox_launcher_gui:main"
windows-sandbox-launcher-gui = "tools.windows_sandbox_launcher_gui:main"
backfill-embeddings = "scripts.backfill_embeddings:cli"
retrieval-ranker = "retrieval_ranker:main"
knowledge-cli = "knowledge_cli:main"
workflow-synth = "workflow_synthesizer:main"
audit-bots = "scripts.audit_self_coding_registration:main"
ingest-stack = "scripts.ingest_stack:main"

[project.entry-points."menace.plugins"]
sample = "menace.plugins.sample:register"

[project.optional-dependencies]
test = [
    "pytest",
    "hypothesis"
]
watch = [
    "watchdog"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*", "tools", "tools.*"]

[tool.setuptools.package-dir]
tools = "tools"


[tool.poetry.scripts]
mypy = "mypy:main"
embedding-backfill = "scripts.backfill_embeddings:cli"
